# nixpkgs-vet

./: .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  body  by-name-config.json  by-name-config.nix  default.nix  flake.nix  knope.toml  nixpkgs-check.nix  package-lock.json  package.json  package.nix  xrefcheck.yaml
.changeset/: breezy-spoons-build.md  config.json  ignore_ineffective_package_attrs_in_strictdeps_structuredattrs_checks.md  remove_support_for_by_name_overrides.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: after-release.yml  check-changelog.yml  main.yml  regular-release.yml  release.yml  update.yml
changes/released/: 0.1.2.md
changes/unreleased/: README.md
npins/: sources.json
scripts/: check-changelog.sh  release.sh  update-github-actions.sh  version.sh
src/: eval.nix  eval.rs  files.rs  gh_write.rs  index.rs  location.rs  main.rs  nix_file.rs  nixpkgs_problem.rs  ratchet.rs  references.rs  status.rs  structure.rs  utils.rs  validation.rs
src/problem/: mod.rs  npv_100.rs  npv_100_by_name_undefined_attribute.rs  npv_101.rs  npv_101_by_name_non_derivation.rs  npv_102.rs  npv_102_by_name_internal_call_package_used.rs  npv_103.rs  npv_103_by_name_cannot_determine_attribute_location.rs  npv_104.rs  npv_104_by_name_override_of_non_syntactic_call_package.rs  npv_105.rs  npv_105_by_name_override_of_non_top_level_package.rs  npv_106.rs  npv_106_by_name_override_contains_wrong_call_package_path.rs  npv_107.rs  npv_107_by_name_override_contains_empty_argument.rs  npv_108.rs  npv_108_by_name_override_contains_empty_path.rs  npv_109.rs  npv_110.rs  npv_111.rs  npv_120.rs  npv_121.rs  npv_122.rs  npv_123.rs  npv_124.rs  npv_125.rs  npv_126.rs  npv_127.rs  npv_128.rs  npv_140.rs  npv_141.rs  npv_142.rs  npv_143.rs  (+16 more)
tests/: mock-nixpkgs.nix
(+220 files in other folders)
