[package]
name = "nixpkgs-vet"
version = "0.1.4"
edition = "2024"

[dependencies]
rnix = "0.12.0"
regex = "1.12.2"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0"
colored = "3.0.0"
itertools = "0.14.0"
rowan = "0.15.17"
indoc = "2.0.7"
relative-path = "2.0.1"
textwrap = "0.16.2"
derive-enum-from-into = "0.2.1"
derive-new = "0.7.0"
derive_more = { version = "2.1.0", features = ["display"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
temp-env = "0.3.6"
