[package]
name = "nixpkgs-vet"
version = "0.3.0"
edition = "2024"

[dependencies]
rnix = "0.14.0"
regex = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0"
colored = "3.1.1"
itertools = "0.14.0"
rowan = "0.16.1"
indoc = "2.0.7"
relative-path = "2.0.1"
textwrap = "0.16.2"
derive-enum-from-into = "0.2.1"
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["display"] }
url = "2.5.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
temp-env = "0.3.6"
